--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body, html { overflow-x:hidden; }
 <h2>Got My SOUL !</h2>
 <h5>By Indhu Isha , India</h5>
 </div>
-<img src="img/pics/Got-My-SOUL.jpg" alt= "Got My SOUL !" />
+<img src="http://www.flyhiee.com/story/img/pics/Got-My-SOUL.jpg" alt= "Got My SOUL !" />
 
 <p>﻿
 <h2> Start writing from here </h2>
